# python-web-tools

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tasks.py
python_web_tools/: soup_helpers.py
python_web_tools_sl/: __init__.py  soup_helpers.py
tests/: __init__.py  test_asoup_helpers.py  test_soup_helpers.py  test_tools.py
