##### 📦 PROJECT #####
[project]
name = "python-web-tools-sl"
version = "0.1.0"
description = "Routines de scraping HTML unifiées (requests, aiohttp, requests_html, httpx) avec BeautifulSoup."
authors = [
    { name = "Sergeileduc" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "requests",
    "aiohttp",
    "beautifulsoup4",
    "lxml",
    "html5lib",
    "python-tools-sl @ git+https://github.com/Sergeileduc/python-tools",
    "requests-html ; extra == 'requests_html'",
    "httpx ; extra == 'httpx'"
]

[project.optional-dependencies]
requests_html = ["requests-html"]
httpx = ["httpx"]


##### 🔨 BUILD #####
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

##### 📦 PACKAGES #####
[tool.setuptools.packages.find]
where = ["."]
include = ["python_web_tools_sl*"]
exclude = ["tests*", "docs*"]

##### 🛠 DEV TOOLS #####
[tool.black]
line-length = 100
target-version = ["py312", "py313"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv.*        # <-- couvre .venv, .venv11, .venv12, etc.
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["python_tools_sl", "python_web_tools_sl"]
combine_as_imports = true
force_single_line = false
skip_glob = [
    ".venv*/**",
    "venv*/**",
    "migrations/**"
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = false
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
plugins = []
files = ["python_web_tools_sl", "tests"]
exclude = '''
(
    ^\.?venv.*$        # .venv, venv, .venv12, etc.
  | ^env.*$            # env, env3.12, etc.
)
'''

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false


[tool.coverage.run]
branch = true
source = ["python_tools_sl"]

[tool.coverage.report]
show_missing = true
skip_covered = true

